examples/test/testpolicy2040.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2040
  namespace: namespace495
spec:
  podSelector:
    matchLabels:
      key16: value49
      key36: value10
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key43: value46
      podSelector:
        matchLabels:
          key26: value9
          key16: value4
